# rs-command-launcher

./: AGENTS.MD  Cargo.toml  build.rs
.config/: env.yaml  setting.yaml
.docs/.config/: env.yaml  local_commands.yaml  setting.yaml
.docs/ideas/: 01-アプリの実装開始.md
.docs/plans/: 2025122018-コマンドランチャー基本機能.md  2025122117-実装順序見直し.md
.docs/reports/: 2025122020-設定読み込みとコマンド実行.md  2025122117-ログ出力とmain構成の変更.md  2025122118-常駐とタスクトレイ.md  2025122214-最小UI追加.md  2025122216-settingsの構造を変更.md  2025122313-設定のロード処理と定義の分離.md  2025123016-local_commandsを設定可能に.md  2026010721-eguiの実装開始.md  2026010816-hotkeyによる表示・非表示の変更機能の実装.md  2026010816-リファクタリング：モジュールの整理.md  2026010917-タスクトレイの実装.md  2026011317-構成変更-controller分離.md  2026011414-タスクトレイ機能の実装.md  2026011416-非アクティブ化の機能実装.md
.docs/scraps/: 20251222-eguiフォントと入力UI.md  20251223-netsh-UAC-クリップボード.md  20260108-egui-hotkey-toggle.md  20260108-egui-tray-integration.md  20260108-タスクトレイ機能.md  20260114-eframeの描画ループ維持のためのウィンドウ非表示手法.md
.docs/specs/: history.md  project.md
.github/agents/: file_description_editor.agent.md  scrap.agent.md  vib.execute_plan.agent.md  vib.execute_plan.md  vib.finalize_implementation.agent.md  vib.idea_to_plan.md  vib.report_from_last_commit.md
.github/instructions/: marldown.instructions.md  rust.instructions.md
.github/prompts/: execute_plan.prompt.md  file_description_editor.prompt.md  finalize_implementation.prompt.md  idea_to_plan.prompt.md  report_from_last_commit.prompt.md  scrap.prompt.md  select_description.prompt.md
src/: config.rs  main.rs  paths.rs  runner.rs  tray.rs  ui.rs
src/app/: controller.rs  (+4 more)
(+9 files in other folders)
