[package]
name = "command-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4.28"
env_logger = "0.11.8"