[package]
name = "command-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4.28"
env_logger = "0.11.8"
eframe = { version = "0.30.0", default-features = false, features = ["default_fonts", "glow"] }
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
] }
raw-window-handle = "0.6"
# icon = "0.2.0"
tray-icon = "0.21.3"
image = { version = "0.25.9", default-features = false, features = ["png"] }
